@@ -3,20 +3,23 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 28/02/2019
-# Data de atualização: 19/05/2021
-# Versão: 0.6
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 11/10/2021
+# Data de atualização: 11/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
-# Configuração do Banco de dados DNS estático IPv4 do servidor local
+# Configuração do Banco de Dados de DNS Estático IPv4 do Servidor Local
 # IPv4		FQDN					CNAME	
 127.0.0.1 	localhost.localdomain	localhost
 127.0.1.1 	ptispo01ws01.pti.intra	ptispo01ws01
 172.16.1.20	ptispo01ws01.pti.intra	ptispo01ws01
 
-# Configuração do Banco de dados DNS estático IPv6 do servidor local 
-::1     ip6-localhost ip6-loopback
+# Configuração do Banco de Dados de DNS Estático IPv6 do Servidor Local
+# OBSERVAÇÃO: por padrão nesse curso não estou utilizando o IPv6
+# IPV6	FQDN			CNAME
+::1 	ip6-localhost	ip6-loopback
 fe00::0 ip6-localnet
 ff00::0 ip6-mcastprefix
 ff02::1 ip6-allnodes
