@@ -3,21 +3,23 @@
 # Facebook: facebook.com/ProcedimentosEmTI
 # Facebook: facebook.com/BoraParaPratica
 # YouTube: youtube.com/BoraParaPratica
-# Data de criação: 28/02/2019
-# Data de atualização: 23/07/2020
-# Versão: 0.3
-# Testado e homologado para a versão do Ubuntu Server 18.04.x LTS x64
-# Kernel >= 4.15.x
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 11/10/2021
+# Data de atualização: 11/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 #
-# Comando para verificar se o Servidor do SSHD tem suporte ao TCPWrappers: ldd /usr/sbin/sshd | grep libwrap
-# Negando todas as redes terem permissão de acesso remoto no SSH
-# Logando as informações de acesso no arquivo de log: /var/log/tcpwrappers-deny-ssh.log
+# Comando para verificar se o Servidor OpenSSH tem suporte ao TCPWrappers: ldd /usr/sbin/sshd | grep libwrap
+# Negando todas as redes acessarem o Servidor Ubuntu remotamente, somente os serviços liberados no arquivo
+# Host.Allow estão liberados para acessar o servidor
+# Logando as informações de acesso no arquivo de log: /var/log/tcpwrappers-deny.log
 #
-ALL: ALL: spawn /bin/echo "$(date) Conexão Recusada - IP %a" >> /var/log/tcpwrappers-deny-ssh.log
+ALL: ALL: spawn /bin/echo "$(date) Conexão Recusada - IP %a" >> /var/log/tcpwrappers-deny.log
 
 # Exemplos de configuração:
 # Liberando uma subrede
-#sshd: 192.168.1. : spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-allow-ssh.log
-#sshd: 192.168.1.0/255.255.255.0: spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-allow-ssh.log
-#sshd: *.pti.intra: spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-allow-ssh.log
-#sshd: 192.168.1. EXCEPT 192.168.1.11: spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-allow-ssh.log
+#sshd: 192.168.1. : spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-deny.log
+#sshd: 192.168.1.0/255.255.255.0: spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-deny.logg
+#sshd: *.pti.intra: spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-deny.log
+#sshd: 192.168.1. EXCEPT 192.168.1.11: spawn /bin/echo "$(date) Conexão Liberada - SSH - IP %a" >> /var/log/tcpwrappers-deny.log
