@@ -4,11 +4,14 @@ Facebook: facebook.com/ProcedimentosEmTI
 Facebook: facebook.com/BoraParaPratica
 YouTube: youtube.com/BoraParaPratica
 Data de criação: 06/10/2021
-Data de atualização: 10/10/2021
+Data de atualização: 11/10/2021
 Versão: 0.2
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 Kernel >= 5.4.x
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
-10/10/2021 - Copia dos scripts da versão 18.04.x e organização dos novos diretórios e criação do arquivo paramentros.sh
+11/10/2021 - Robson Vaamonde - Customização do script: 01-openssh.sh e do arquivos de configuração dos serviços de: 
+issue.net, hosts, hosts.allow, hosts.deny e sshd_config, todos customizados para a versão 20.04.x do Ubuntu Server
+10/10/2021 - Robson Vaamonde - Criação do arquivo 00-paramentros.sh para facilitar as configurações dos scripts
+10/10/2021 - Robson Vaamonde - Copia dos scripts da versão 18.04.x e organização dos novos diretórios e 
 06/10/2021 - Robson Vaamonde - Criação do repositório e configuração dos script para a nova versão do Ubuntu 20.04.x
